[metadata]
name = streamlit_ace
version = attr: streamlit_ace.__version__
description = Ace editor component for Streamlit.
long_description = file: README.md
long_description_content_type = text/markdown
home_page = https://share.streamlit.io/okld/streamlit-gallery/main?p=ace-editor
url = https://github.com/okld/streamlit-ace
author = okld
license = MIT
license_file = LICENSE

[options]
packages = find:
include_package_data = true
python_requires = >= 3.6
setup_requires =
    setuptools >= 40.8.0
    wheel
install_requires =
    streamlit >= 0.63
